kustomize/overlays/prod/computate.org/ingresses/sso-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: HTTP
#    route.openshift.io/termination: edge
#    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
#    kubernetes.io/ingress.class: gce
#    # This enables HTTP connections from Internet clients
#    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.global-static-ip-name: sso
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: sso
    networking.gke.io/v1beta1.FrontendConfig: sso
  labels:
    app: sso
  name: sso-ingress
  namespace: keycloak
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: sso-service
      port:
        number: 8080
